fix: add pre wrap component
Latest webflow import 2021-04-08 - Remove location and pre-wrap paragraph
Create and use pre-wrap component for service requests

--- a/src/css/citizen-engagement-app.css
+++ b/src/css/citizen-engagement-app.css
@@ -1931,9 +1931,19 @@ strong {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
   border-radius: 10px;
+  background-image: none;
   text-align: center;
   text-decoration: none;
+}
+
+.button:hover {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.04)), to(rgba(0, 0, 0, 0.04)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.04), rgba(0, 0, 0, 0.04));
 }
 
 .button.button--form-submit {
@@ -1945,6 +1955,20 @@ strong {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+}
+
+.button.button--remove-location {
+  min-height: 100%;
+}
+
+.button.button--disabled {
+  background-color: #ccc;
+  color: grey;
+  cursor: default;
+}
+
+.button.button--disabled:hover {
+  background-image: none;
 }
 
 .nav-logo {
@@ -3013,17 +3037,14 @@ strong {
   align-items: center;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.04);
-  background-image: url('../images/Screenshot-2021-04-01-103033.png');
-  background-position: 0px 0px;
-  background-size: auto;
 }
 
 .map-contols {
   position: absolute;
   left: auto;
   top: auto;
-  right: 16px;
-  bottom: 16px;
+  right: 1em;
+  bottom: 1em;
   z-index: 1;
 }
 
@@ -3048,6 +3069,10 @@ strong {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.map-pin.hidden {
+  display: none;
 }
 
 .map-button {
@@ -3124,6 +3149,74 @@ strong {
   background-color: rgba(0, 0, 0, 0.3);
   -webkit-filter: blur(3px);
   filter: blur(3px);
+}
+
+.map-remove-location {
+  display: -ms-grid;
+  display: grid;
+  margin-top: 1.5em;
+  padding: 0.7em 1em;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 1em;
+  grid-row-gap: 16px;
+  -ms-grid-columns: 1fr -webkit-max-content;
+  -ms-grid-columns: 1fr max-content;
+  grid-template-columns: 1fr -webkit-max-content;
+  grid-template-columns: 1fr max-content;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.04);
+}
+
+.map-remove-location.hidden {
+  display: none;
+}
+
+.map-remove-location__button-wrapper {
+  min-height: 44px;
+}
+
+.map-coordinates {
+  font-weight: 700;
+}
+
+.map-loading {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.loading-spinner {
+  width: 24px;
+  height: 24px;
+}
+
+.paragraph--prewrap {
+  white-space: pre-wrap;
 }
 
 @media screen and (max-width: 991px) {
@@ -3251,6 +3344,14 @@ strong {
     -ms-grid-row-align: stretch;
     align-self: stretch;
   }
+
+  .map-remove-location {
+    padding-bottom: 1em;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
 }
 
 #w-node-_66fe7cf4-3bdf-9542-83a6-da82b4a18059-b4a1802d {
@@ -3262,6 +3363,13 @@ strong {
   grid-column-start: span 1;
   -ms-grid-column-span: 1;
   grid-column-end: span 1;
+}
+
+#w-node-_95976036-019b-1e5e-f325-627244ac4565-5858c1fd {
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
 }
 
 #w-node-d386b479-4fc4-6779-9719-b167fe56cb0c-fe56cb06 {
@@ -3556,6 +3664,42 @@ strong {
   grid-column-start: span 2;
   -ms-grid-column-span: 2;
   grid-column-end: span 2;
+}
+
+#w-node-a3d234c1-673f-09d1-20d0-d54a1d45c90a-a23917bb {
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: span 1;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: span 1;
+}
+
+#w-node-efba80f6-6922-4df2-4921-e51d1459fb7d-a23917bb {
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
+}
+
+#w-node-_6ef52ed1-d3eb-87ca-611f-620ef05cccfc-646016d5 {
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: span 1;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: span 1;
+}
+
+#w-node-_6ef52ed1-d3eb-87ca-611f-620ef05ccd17-646016d5 {
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
 }
 
 @font-face {
